---------------------------------------------------------------------------------------------------
Version: 0.1.45
Date: 27.08.2023
  Bugfixes:
    - Some tech prerequsites not showing.
  Features:
    - New message added.
  Scripting:
    - Reworked messages in control stage
  Thanks:
    - @_CodeGreen. For helping with multi lane script placments.
---------------------------------------------------------------------------------------------------
Version: 0.1.44
Date: 27.08.2023
  Changes:
    - Vanilla recipes price adjusted. Feedback would be great.
    - All PA&R items in recipes is/was removed (Vanilla)
    - Tech prerequisites in general adjusted/added.
    - Added modded tech prereqesits.
    - Compat - Util files merged.
    - Moved TeleportationEquipment code to other files.
  Bugfixes:
    - Known Nanobot compat bug.
    - Fluid in Compatibility issue resolved.
  Modding:
    - Rewrote tech changes for TeleportationEquipment.
  Thanks:
    - Discord: @Dr Pez. For fixing Compatibility fluid recipes. Simplefied Compatiblity. Merging files.
  Discord-Realese:
    - Just to say that it's a Realease on S_gamez Discord only.
---------------------------------------------------------------------------------------------------
Version: 0.1.43
Date: 22.08.2023
  Changes:
    - Corrected & added more Info Warnings. Bob's & Darkstar.
    - Adjusted Info messages little bit everywhere.
---------------------------------------------------------------------------------------------------
Version: 0.1.42
Date: 20.08.2023
  Modding:
    - Improved SpaceX Compatibility.
    - Recipes for Exotic Industries started (EI).
  Bugfixes:
    - Crash with 248K.
    - Crash with half Bob's modpack, & SpaceX (space mod)
  Scripting:
    - Reloacated load positions of file to not have problem with 248K & EI modpacks.
    - Had by mistake put it in Final fixes which casues errors on 248K & EI side.
    - SpaceX files removed.
  Info: