@@ -3,54 +3,43 @@ local util = {}
 --Recipe Compatibility Generator
 
 util.update_ingredients = function(recipe, replacements)
-    local ingredients = recipe.ingredients  --original list to be replaced
-    local remove = {} -- local table to trim ingredients after the replacements (to maintain order)
-    local not_crafting = false -- trigger for crafting cat change
-    for i, ingredient in pairs(ingredients) do -- for each line of ingredients list
-        if ingredient.name then -- check if name type in original list
-            local replacement = replacements[ingredient.name] --if replacement maps
-            if replacement and replacement.type then
-                ingredient = replacement -- copy all of the sub-table
-                if replacement.type == "fluid" then
-                    not_crafting = true --trigger category change
+    local ingredients = recipe.ingredients
+    local remove = {}
+    local not_crafting = false
+    for i, ingredient in pairs(ingredients) do
+        if ingredient.type then
+            local replacement = replacements[ingredient.name]
+            if replacement then
+                ingredient.name = replacement[1]
+                ingredient.amount = replacement[2]
+                --where type exists, check if fluid
+                if ingredient.type == "fluid" then
+                    --trigger category change
+                    not_crafting = true
                 end
-            elseif replacement then -- if original = named, replacement not
-                ingredient.name = replacement[1] --set the name to entry 1
-                ingredient.amount = replacement[2] --set amount to entry 2
             end
         else
             local replacement = replacements[ingredient[1]]
-            if replacement and replacement.type then
-                ingredient = replacement -- copy all of the sub-table
-                if replacement.type == "fluid" then
-                    not_crafting = true --trigger category change
-                end
-            elseif replacement then
-                ingredient = replacement -- copy all of the sub-table
+            if replacement then
+                ingredient[1] = replacement[1]
+                ingredient[2] = replacement[2]
             end
         end
         if ingredient[1] == "" or ingredient.name == "" then
             remove[#remove+1]=i
         end
     end
-    for k, new_ingredient in pairs(replacements) do --if new, and not replacement
+    for k, new_ingredient in pairs(replacements) do
         if type(k) ~= "string" then
-            ingredients[#ingredients+1] = new_ingredient                    
-            if new_ingredient.type and new_ingredient.type == "fluid" then
-                not_crafting = true --trigger category change
-            end
+            ingredients[#ingredients+1] = new_ingredient
         end
     end
     for _, remove_ingredient in pairs(remove) do
         table.remove(ingredients,remove_ingredient)
     end
     --check if category == default, change it
-    if not_crafting then
-        if recipe.category == "crafting" then
-            recipe.category = "crafting-with-fluid"
-        elseif recipe.category == nil then
-            recipe.category = "crafting-with-fluid"
-        end
+    if not_crafting and recipe.category == "crafting" then
+        recipe.category = "crafting-with-fluid"
     end
 end
 
