@@ -172,60 +172,60 @@ armour_8=Armour MK8
 armour_9=Armour MK9
 armour_10=Armour MK10
 
-battery_1=Battery Equipement MK1
-battery_2=Battery Equipement MK2
-battery_3=Battery Equipement MK3
-battery_4=Battery Equipement MK4
-battery_5=Battery Equipement MK5
-battery_6=Battery Equipement MK6
-battery_7=Battery Equipement MK7
-battery_8=Battery Equipement MK8
-battery_9=Battery Equipement MK9
-battery_10=Battery Equipement MK10
+battery_1=Battery MK1
+battery_2=Battery MK2
+battery_3=Battery MK3
+battery_4=Battery MK4
+battery_5=Battery MK5
+battery_6=Battery MK6
+battery_7=Battery MK7
+battery_8=Battery MK8
+battery_9=Battery MK9
+battery_10=Battery MK10
 
-shield_1=Shield Equipement MK1
-shield_2=Shield Equipement MK2
-shield_3=Shield Equipement MK3
-shield_4=Shield Equipement MK4
-shield_5=Shield Equipement MK5
-shield_6=Shield Equipement MK6
-shield_7=Shield Equipement MK7
-shield_8=Shield Equipement MK8
-shield_9=Shield Equipement MK9
-shield_10=Shield Equipement MK10
+shield_1=Shield MK1
+shield_2=Shield MK2
+shield_3=Shield MK3
+shield_4=Shield MK4
+shield_5=Shield MK5
+shield_6=Shield MK6
+shield_7=Shield MK7
+shield_8=Shield MK8
+shield_9=Shield MK9
+shield_10=Shield MK10
 
-fusion-reactor_1=Fusion Reactor Equipment MK1
-fusion-reactor_2=Fusion Reactor Equipment MK2
-fusion-reactor_3=Fusion Reactor Equipment MK3
-fusion-reactor_4=Fusion Reactor Equipment MK4
-fusion-reactor_5=Fusion Reactor Equipment MK5
-fusion-reactor_6=Fusion Reactor Equipment MK6
-fusion-reactor_7=Fusion Reactor Equipment MK7
-fusion-reactor_8=Fusion Reactor Equipment MK8
-fusion-reactor_9=Fusion Reactor Equipment MK9
-fusion-reactor_10=Fusion Reactor Equipment MK10
+fusion-reactor_1=Fusion Reactor MK1
+fusion-reactor_2=Fusion Reactor MK2
+fusion-reactor_3=Fusion Reactor MK3
+fusion-reactor_4=Fusion Reactor MK4
+fusion-reactor_5=Fusion Reactor MK5
+fusion-reactor_6=Fusion Reactor MK6
+fusion-reactor_7=Fusion Reactor MK7
+fusion-reactor_8=Fusion Reactor MK8
+fusion-reactor_9=Fusion Reactor MK9
+fusion-reactor_10=Fusion Reactor MK10
 
-solar_1=Personal Solar Equipment MK1
-solar_2=Personal Solar Equipment MK2
-solar_3=Personal Solar Equipment MK3
-solar_4=Personal Solar Equipment MK4
-solar_5=Personal Solar Equipment MK5
-solar_6=Personal Solar Equipment MK6
-solar_7=Personal Solar Equipment MK7
-solar_8=Personal Solar Equipment MK8
-solar_9=Personal Solar Equipment MK9
-solar_10=Personal Solar Equipment MK10
+solar_1=Personal Solar MK1
+solar_2=Personal Solar MK2
+solar_3=Personal Solar MK3
+solar_4=Personal Solar MK4
+solar_5=Personal Solar MK5
+solar_6=Personal Solar MK6
+solar_7=Personal Solar MK7
+solar_8=Personal Solar MK8
+solar_9=Personal Solar MK9
+solar_10=Personal Solar MK10
 
-roboport_1=Personal Roboport Equipment MK1
-roboport_2=Personal Roboport Equipment MK2
-roboport_3=Personal Roboport Equipment MK3
-roboport_4=Personal Roboport Equipment MK4
-roboport_5=Personal Roboport Equipment MK5
-roboport_6=Personal Roboport Equipment MK6
-roboport_7=Personal Roboport Equipment MK7
-roboport_8=Personal Roboport Equipment MK8
-roboport_9=Personal Roboport Equipment MK9
-roboport_10=Personal Roboport Equipment MK10
+roboport_1=Personal Roboport MK1
+roboport_2=Personal Roboport MK2
+roboport_3=Personal Roboport MK3
+roboport_4=Personal Roboport MK4
+roboport_5=Personal Roboport MK5
+roboport_6=Personal Roboport MK6
+roboport_7=Personal Roboport MK7
+roboport_8=Personal Roboport MK8
+roboport_9=Personal Roboport MK9
+roboport_10=Personal Roboport MK10
 
 laser_1=Personal Laser Defence MK1
 laser_2=Personal Laser Defence MK2
@@ -238,13 +238,13 @@ laser_8=Personal Laser Defence MK8
 laser_9=Personal Laser Defence MK9
 laser_10=Personal Laser Defence MK10
 
-exoskeleton_1=Exoskeleton Equipment Mk1
-exoskeleton_2=Exoskeleton Equipment Mk2
-exoskeleton_3=Exoskeleton Equipment Mk3
-exoskeleton_4=Exoskeleton Equipment Mk4
-exoskeleton_5=Exoskeleton Equipment Mk5
-nv-bi_mk1=Night Vision & Belt Immunity Equipment 
-no-power-equipment_mk2=Minimal Power Consuption Equipment
+exoskeleton_1=Exoskeleton Mk1
+exoskeleton_2=Exoskeleton Mk2
+exoskeleton_3=Exoskeleton Mk3
+exoskeleton_4=Exoskeleton Mk4
+exoskeleton_5=Exoskeleton Mk5
+nv-bi_mk1=Night Vision & Belt Immunity 
+no-power-equipment_mk2=Minimal Power Consuption
 
 [achievement-name]
 
