@@ -10,6 +10,8 @@ local replace = {
     ["power-armor-2"] = "armour_3",
     ["kr-power-armor-mk3"] = "armour_3",
     ["kr-power-armor-mk4"] = "armour_4",
+    ["battery-equipment"] = "battery_1",
+    ["battery-mk2-equipment"] = "battery_2",
     ["solar-panel-equipment"] = "solar_1",
     ["personal-laser-defense-equipment"] = "laser_1",
     ["kr-personal-laser-defense-mk2-equipment"] = "laser_2",
@@ -61,6 +63,8 @@ local item_replace = {
     ["modular-armor"] = "a_mk1",
     ["power-armor"] = "a_mk2",
     ["power-armor-mk2"] = "a_mk3",
+    ["battery-equipment"] = "b_mk1",
+    ["battery-mk2-equipment"] = "b_mk2",
     ["night-vision-equipment"] = "nv_mk1",
     ["belt-immunity-equipment"] = "bi_mk1",
     ["fusion-reactor-equipment"] = "f_mk1",
@@ -71,7 +75,6 @@ local item_replace = {
     ["exoskeleton-equipment"] = "e_mk1",
     ["exoskeleton-equipment-2"] = "e_mk2",
     ["exoskeleton-equipment-3"] = "e_mk3",
-    ["battery-equipment"] = "b_mk1",
     ["energy-shield-equipment"] = "s_mk1",
     ["energy-shield-mk2-equipment"] = "s_mk2",
     ["energy-shield-mk3-equipment"] = "s_mk3",
